--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,31 +1,22 @@
-<h1>Movies</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Director name</th>
-      <th>Release date</th>
-      <th>Is active</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @movies.each do |movie| %>
-      <tr>
-        <td><%= movie.name %></td>
-        <td><%= movie.director_name %></td>
-        <td><%= movie.release_date %></td>
-        <td><%= movie.is_active %></td>
-        <td><%= link_to 'Show', movie %></td>
-        <td><%= link_to 'Edit', edit_movie_path(movie) %></td>
-        <td><%= link_to 'Destroy', movie, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+<h3>Welcome to Movie Booking </h3>
+<hr/>
+<div class="row">
+<% @movies.each do |movie| %>
+<div class="col-sm-6">
+<div class="card">
+  <div class=" card-block">
+    <h4 class="card-title"><%= movie.name %></h4>
+    <p class="card-text">This movie is running in <%= movie.theatres.count %> theatres in <%= movie.shows.count %> Shows , price for each ticket is <%= price_helper(movie.shows.first.seat_price) %></p>
+    <%= link_to movie_path(movie) do %>
+      <button class="btn btn-primary">Book Movie</button>
     <% end %>
-  </tbody>
-</table>
+  </div>
+   <div class="card-footer text-muted">
+    released 2 days back
+  </div>
+</div>
+</div>
+<% end %>
+</div>
 
-<br>
-
-<%= link_to 'New Movie', new_movie_path %>
+</div>
