--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -24,8 +24,8 @@
 
   <div class="field">
     <%= f.label :gender %><br />
-    <%= f.radio_button :gender, 'Male', class: 'form-control m-2' %> Male
-    <%= f.radio_button :gender, 'Female', class: 'form-control m-2' %> Female
+    <%= f.radio_button :gender, 'male', class: 'form-control m-2' %> Male
+    <%= f.radio_button :gender, 'female', class: 'form-control m-2' %> Female
   </div>
 
   <div class="actions">
