--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,39 +6,44 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="/">Home</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="/movies">Movies</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="/shows">Shows</a>
-      </li>
 
-    </ul>
-    <p class="navbar-text float-right">
-    <% if user_signed_in? %>
-      Logged in as <strong><%= current_user.email %></strong>.
-      <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
-      <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
-    <% else %>
-      <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
-      <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
+    <div>
+    <%= nav_bar :fixed => :top, :responsive => true do %>
+      <%= menu_group do %>
+        <%= menu_item "Home", root_path %>
+        <%= menu_divider %>
+        <%= menu_item "Bookings", bookings_path if user_signed_in? %>
+      <% end %>
+      <%= menu_group :pull => :right do %>
+        <% if user_signed_in? %>
+          <%= menu_item "Log Out", destroy_user_session_path %>
+        <% else %>
+          <%= menu_item "Login", new_user_session_path  %> |
+          <%= menu_item "Register", new_user_registration_path  %>
+        <% end %>
+      <% end %>
     <% end %>
-    </p>
-
-    <% if notice %>
-      <p id="notice" class="alert alert-success"<%= notice %></p>
-    <% end %>
-    <% if alert %>
-      <p id="error_explanation" class="alert alert-danger"><%= alert %></p>
-    <% end %>
-    <%= yield %>
+    </div>
+    
+    <div class="container">
+      <div class="row">
+        <% if notice %>
+          <p id="notice" class="alert alert-success"<%= notice %></p>
+        <% end %>
+        <% if alert %>
+          <p id="error_explanation" class="alert alert-danger"><%= alert %></p>
+        <% end %>
+        <div class="span9"><%= yield %></div>
+        <div class="span3">
+          <h2>About Us</h2>
+          Movie Booking System
+        </div>
+      </div>
+    </div>
   </body>
 </html>
