--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Booking</h1>
-
-<%= render 'form', booking: @booking %>
-
-<%= link_to 'Back', bookings_path %>
+<div class="row">
+	<h2>Movie: <%= @show.movie.name%></h2>
+	<%= render 'form', booking: @booking, show: @show %>
+	<%= link_to 'Back', bookings_path %>
+</div>
