--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,6 @@
-<h2 class="text-center m-5">Sign up</h2>
-<section class="col-8 offset-2 col-sm-6 offset-sm-3">
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<div class="border-form-div">
+  <h2>Sign up</h2>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
@@ -36,7 +35,7 @@
   <div class="actions">
     <%= f.submit "Sign up", class: 'btn btn-primary m-2' %>
   </div>
-<% end %>
+  <% end %>
 
-<%= render "devise/shared/links" %>
-</section>
+  <%= render "devise/shared/links" %>
+</div>
