--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,16 +1,16 @@
 <h3>Welcome to Movie Booking </h3>
 <hr/>
 <div class="row">
-<% @movies.each do |movie| %>
-<div class="col-sm-6">
-<div class="card">
-  <div class=" card-block">
-    <h4 class="card-title"><%= movie.name %></h4>
+  <% @movies.each do |movie| %>
+  <div class="col-sm-6">
+    <div class="card">
+      <div class=" card-block">
+        <h4 class="card-title"><%= movie.name %></h4>
 
-    <% movie.theatres.uniq.each do | theatre| %>
-      <p class="card-text">
-        <%= theatre.name %> Seats: <%=theatre.seats%>
-        <table class='table'>
+        <% movie.theatres.uniq.each do | theatre| %>
+        <p class="card-text">
+          <%= theatre.name %> Seats: <%=theatre.seats%>
+          <table class='table'>
             <thead>
               <tr>
                 <th>Date</th>
@@ -23,9 +23,9 @@
               </tr>
             </thead>
             <tbody>
-              
-        <% theatre.shows.where(movie_id: movie.id).each do |show| %>
-          <tr>
+
+              <% theatre.shows.where(movie_id: movie.id).includes(:timing).each do |show| %>
+              <tr>
                 <td><%= show.show_date %></td>
                 <td><%= show.timing.start_time.strftime("%H:%M") %></td>
                 <td><%= show.timing.end_time.strftime("%H:%M") %></td>
@@ -33,25 +33,22 @@
                 <% if user_signed_in? && show.valid_showtime? %>
                 <td>
                   <%= link_to new_booking_path(show_id: show.id) do %>
-                    <button class="btn btn-primary">Book</button>
+                  <button class="btn btn-primary">Book</button>
                   <% end %>
                 </td>
                 <% end %>
-        </tr>
-        <% end %>
+              </tr>
+              <% end %>
 
             </tbody>
           </table>
-      </p>
-    <% end %>
-    
+        </p>
+        <% end %>
+
+      </div>
+    </div>
   </div>
-   <div class="card-footer text-muted">
-   
-  </div>
-</div>
-</div>
-<% end %>
+  <% end %>
 </div>
 
 </div>
