--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,19 +1,12 @@
-<p id="notice"><%= notice %></p>
+<h2>Movie: <%= @booking.show.movie.name%></h2>
+<table class='table'>
+	<tbody>
+		<tr><td>Date: </td><td><%= @booking.show.show_date %></td></tr>
+		<tr><td>Start Time: </td><td><%= @booking.show.timing.start_time.strftime("%H:%M") %></td></tr>
+		<tr><td>End Time: </td><td><%= @booking.show.timing.end_time.strftime("%H:%M") %></td></tr>
+		<tr><td>Seats: </td><td><%= @booking.seats %></td></tr>
+		<tr><td>Ticket Price: </td><td><%= '%.2f' % @booking.total_price %></td></tr>
+	</tbody>
+</table>
 
-<p>
-  <strong>User:</strong>
-  <%= @booking.user_id %>
-</p>
-
-<p>
-  <strong>Show:</strong>
-  <%= @booking.show_id %>
-</p>
-
-<p>
-  <strong>Seats:</strong>
-  <%= @booking.seats %>
-</p>
-
-<%= link_to 'Edit', edit_booking_path(@booking) %> |
-<%= link_to 'Back', bookings_path %>
+<%= link_to 'Edit', edit_booking_path(@booking) %> | <%= link_to 'Back', bookings_path %>
