--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -27,9 +27,9 @@
   </div>
 
   <div class="field">
-    <%= f.label :gender %><br />
-    <%= f.radio_button :gender, 'male', class: 'form-control m-2' %> Male
-    <%= f.radio_button :gender, 'female', class: 'form-control m-2' %> Female
+    <%= f.label :gender %>
+    <%= f.radio_button :gender, 'male'%> Male
+    <%= f.radio_button :gender, 'female' %> Female<br />
   </div>
 
   <div class="actions">
